bin_PROGRAMS = bfi
bfi_SOURCES =  src/brainfuck.h src/compress.c src/compress.h src/err_lib.c src/err_lib.h src/execute.c src/execute.h src/file_reader.c src/file_reader.h src/help.h src/lib_args.c src/lib_args.h src/lib_files.c src/lib_files.h src/lib_inter.c src/lib_inter.h src/lib-ttycolor.c src/lib-ttycolor.h src/main.c src/mem_lib.c src/mem_lib.h src/warn_lib.c src/warn_lib.h
bfi_CFLAGS = -lreadline
bfi_LDFLAGS = -lreadline
man_MANS = man/bfi.1

